# copilot-support

./: .env.example  .gitignore  Makefile  README.md  TECH_STACK.md
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py  mock_data.py
apps/api/app/services/: call_engine.py  insforge.py  live_outbound.py  livekit_client.py  lm_studio_agent.py  local_store.py  override_broker.py  phone.py  refund_agent.py  repository.py
apps/api/tests/: test_call_engine.py  test_config.py  test_live_outbound.py  test_lm_studio_agent.py  test_local_store.py  test_refund_agent.py
apps/web/: app-config.js  app.js  cases.html  index.html  styles.css
apps/web/assets/hero/: refund-desk-hero.json
apps/worker/: internal_client.py  requirements.txt  worker_app.py
scripts/: generate_hero_video.py  probe_personaplex_lmstudio.py
scripts/prompts/: hero_video_call_center.txt
